<resources>
    <string name="app_name">Kituoni</string>
    <string name="logo">logo</string>
    <string name="login_title">Ministry of Health\nKituoni App</string>
    <string name="nav_logo">Ministry of Health Facility App</string>
    <string name="due_only">Referred</string>
    <string name="clicked_sick_child">You have clicked the sick child follow-up action</string>
    <string name="clicked_malaria_diagnosis">You have clicked the malaria diagnosis action</string>
    <string name="referral_for">Referral for %s</string>
    <string name="full_referral_info">View full referral info</string>
    <string name="back_to_referrals">Back to Referrals</string>
    <string name="mark_done">Mark Done</string>
    <string name="mark_as_done">Referral received</string>
    <string name="view_profile">View Profile</string>
    <string name="chw_phone">Provider\'s Phone</string>
    <string name="chw">Provider\'s Name</string>
    <string name="referral_date">Referral date</string>
    <string name="problem">Problem</string>
    <string name="phone">Phone</string>
    <string name="client_name_age_suffix">%s, %s</string>
    <string name="mark_as_done_title">Mark as done?</string>
    <string name="mark_as_done_message">Referral will be closed and disappear from app.</string>
    <string name="phone_not_provided">Phone not provided</string>
    <string name="anc_danger_sign_prefix">ANC Danger Signs; Symptoms: %s</string>
    <string name="referral_day">Referral %s ago</string>
    <string name="fp_update_family_planning">Update Family planning Registration</string>
    <string name="error_opening_profile">Error opening client\'s profile</string>
    <string name="family">%s Family</string>
    <string name="created">Created: %s</string>
    <string name="submit">SUBMIT</string>
    <string name="hts_clients">HTS Clients</string>
    <string name="hiv_registration">HIV Registration</string>
    <string name="chw_client_found">Has the contact client been found</string>
    <string name="chw_followed_details">Has the client been followed up by chw</string>
    <string name="chw_agreed_to_be_tested">Has the client agree to be tested</string>
    <string name="chw_test_location">Client test location</string>
    <string name="anc_first_visit_medical_and_surgical_history">Medical And Surgical History</string>
    <string name="anc_first_visit_baseline_investigation">Baseline Investigation</string>
    <string name="anc_first_visit_obstetric_examination">Obstetric Examination</string>
    <string name="anc_first_visit_tt_vaccination">Td Vaccination</string>
    <string name="anc_first_and_recurring_visit_counselling">Counselling</string>
    <string name="anc_recuring_visit_triage">Triage</string>
    <string name="anc_recuring_visit_cunsultation">Consultation</string>
    <string name="anc_recuring_visit_lab_tests">Lab Tests</string>
    <string name="anc_recuring_visit_pharmacy">Pharmacy</string>
    <string name="anc_recuring_visit_pregnancy_status">Pregnancy Status</string>
    <string name="anc_recuring_visit_review_birth_and_emergency_plan">Review Birth and Emergency Plan</string>
    <string name="record_anc_first_visit">Record ANC First Visit</string>
    <string name="record_anc_followup_visit">Record ANC Followup Visit</string>
    <string name="anc_first_visit">ANC First Visit</string>
    <string name="anc_followup_visit">ANC Followup Visit</string>
    <string name="visit_in_progress">%s visit still in progress</string>
    <string name="optional"></string>
    <string name="record_eac_first_visit">EAC Visit, Session: %d</string>
    <string name="eac_visit_done">EAC Visit, Session: %d Completed</string>
    <string name="record_eac_second_visit">Second EAC Visit</string>
    <string name="pmtct_followup_form_title">PMTCT Followup</string>
    <string name="record_first_pmtct">Record PMTCT Visit</string>
    <string name="record_pmtct_visit">Record PMTCT Visit</string>
    <string name="action_pregnancy_confirmation_referrals">Pregnancy Confirmation</string>
    <string name="action_fp_ecp">ECP</string>
    <string name="pmtct_pending_registration">PMTCT Pending Registration</string>
    <string name="register_button_text">REGISTER</string>
    <string name="anc_pregnacy_status">Pregnancy Status: </string>
    <string name="anc_pregnacy_status_viable">Viable</string>
    <string name="anc_pregnacy_status_fetal_death">Intrauterine Fetal Death (Still Birth)</string>
    <string name="anc_pregnacy_status_spontaneous_abortion">Spontaneous Abortion</string>
    <string name="any_changes_you_make">Any Changes You Made Will Be Discarded</string>
    <string name="gestation_age">Gestation Age: {0} Weeks</string>
    <string name="malaria">mRDT for Malaria: {0}</string>
    <string name="height_in_cm">Height: {0} cm</string>
    <string name="fundal_height">Fundal Height: {0} cm</string>
    <string name="hiv_status">HIV Status: {0}</string>
    <string name="partner_registration_action_title">Partner Registration</string>
    <string name="partner_testing_action_title">Partner Testing</string>
    <string name="first_pregnancy_option">First pregnancy</string>
    <string name="none_option_for_medical_surgical_history">None</string>
    <string name="record_ctc_number">Record CTC Number</string>
    <string name="referral_sent">Community Followup Referral Sent</string>
    <string name="index_contact_has_feedback_from_community">Has Feedback from Community</string>
    <string name="pending_ctc_registration">Pending CTC Registration</string>
    <string name="menu_independent">Independent</string>
    <string name="medical_and_surgical_filled">Medical And Surgical History Filled</string>
    <string name="obstetric_exam_complete">Obstetric Examination Complete</string>
    <string name="baseline_investigation_conducted">Baseline Investigation Conducted</string>
    <string name="tt_vaccination_filled">Td Vaccination Filled</string>
    <string name="counselling_given">Counselling given</string>
    <string name="partner_registered">Partner Registered</string>
    <string name="partner_tested">Partner Tested</string>
    <string name="review_birth_emergency_plan">Review of Birth and Emergency Plan is Complete</string>
    <string name="triage_complete">Triage Complete</string>
    <string name="anc_consultation_done">ANC assessment and Update Maternal Handbook Complete</string>
    <string name="lab_tests_complete">Lab Tests Complete</string>
    <string name="med_and_supp_issued">Medications and Supplements Issued</string>
    <string name="second_hiv_test_results_woman">Second HIV Test Results</string>
    <string name="second_hiv_test_results_partner">Second HIV Test Results</string>
    <string name="new_client">New Client</string>
    <string name="existing_client">Existing Client</string>
    <string name="all_male_clients">All Male Clients</string>
    <string name="register_partner_dialog_title">Register this client as Partner?</string>
    <string name="view_partner_profile">View Partner Profile</string>
    <string name="recorded_partner_testing_results">Recorded Partner Testing Results</string>
    <string name="pmtct_counselling">Counselling given</string>
    <string name="pmtct_tb_screening">TB Screening Complete</string>
    <string name="pmtct_clinical_disease_staging">Clinical Staging of Disease is Complete</string>
    <string name="given_arv_prescription">ARV Prescription Given</string>
    <string name="not_given_arv_prescription">ARV Prescription Not Given</string>
    <string name="cd4_sample_collected">CD4 Sample Collected</string>
    <string name="pmtct_counselling_not_given">Counselling Not Given</string>
    <string name="pmtct_baseline_investigation_complete">Baseline Investigation Complete</string>
    <string name="hvl_sample_collected">HVL Sample Collected</string>
    <string name="cd4_count">CD4 Count</string>
    <string name="record_cd4">Record CD4</string>
    <string name="Cd4_results">CD4 Results</string>
    <string name="eac_first_visit">EAC First Visit</string>
    <string name="eac_second_visit">EAC second Visit</string>
    <string name="menu_hei">HEI</string>
    <string name="hei_toolbar_title">Return To All HEI Clients</string>
    <string name="record_followup">Record HEI Followup</string>
    <string name="hei_visit">HEI Visit</string>
    <string name="antibody_test_results_filled">Antibody Test Results Filled</string>
    <string name="hei_arv_prescription_given">ARV prophylaxis Given</string>
    <string name="hei_arv_prescription_not_given">ARV prophylaxis Not Given</string>
    <string name="other_combination_given">Other Combinations Given</string>
    <string name="pmtct_followup_status">Followup Status:</string>
    <string name="next_facility_visit_date">Next Facility Visit Date: {0}</string>
    <string name="partograph_date_time">Partograph Details recorded at {0}, {1} by {2}</string>
    <string name="fetal_well_being">Fetal Well Being</string>
    <string name="fetal_heart_rate">Fetal Heart Rate: {0} bpm</string>
    <string name="fetal_moulding">Moulding: {0}</string>
    <string name="amniotic_fluid">Amniotic Fluid: {0}</string>
    <string name="mother_well_being">Mother Well Being</string>
    <string name="pulse_rate">Pulse Rate: {0} bpm</string>
    <string name="respiratory_rate">Respiratory Rate: {0}</string>
    <string name="temperature">Temperature: {0} °C</string>
    <string name="blood_pressure">Blood Pressure: {0}/{1} mmHg</string>
    <string name="urine_protein">Urine Protein : {0}</string>
    <string name="urine_acetone">Urine Acetone: {0}</string>
    <string name="urine_volume">Urine Volume: {0}</string>
    <string name="fetal_progress_of_labour">Fetal Progress of Labour</string>
    <string name="cervix_dilation">Cervix Dilation: {0}</string>
    <string name="descent_presenting_part">Descent Presenting Part: {0}</string>
    <string name="contraction">Contraction frequency: {0}, Contraction duration: {1}</string>
    <string name="ld_emergency_referral">Emergency Referral</string>
    <string name="refer_child_for_emergency">Refer %1$s\'s for Emergency</string>
    <string name="pmtct_visit_title">PMTCT Visit {0}: {1}</string>
    <string name="pmtct_counselling_topics_provided">Counselling Topics Provided:</string>
    <string name="pmtct_clinical_staging_disease">Clinical Staging of the disease:</string>
    <string name="pmtct_symptoms">Symptoms:</string>
    <string name="pmtct_tb_registration_number">TB Clinic Number:</string>
    <string name="pmtct_tb_symptoms_screening">TB Symptoms Screening:</string>
    <string name="pmtct_investigate_for_tb">Investigation for TB:</string>
    <string name="pmtct_reason_for_not_conducting_tb_test">Reasons for not conducting TB Test:</string>
    <string name="pmtct_other_reason_for_not_conducting_tb_test">Other reasons for not conducting TB Test:</string>
    <string name="pmtct_has_been_provided_with_tpt_before">Provided with TPT before:</string>
    <string name="pmtct_completed_tpt">Has completed TPT:</string>
    <string name="pmtct_is_client_provided_with_tpt">Provided with TPT:</string>
    <string name="pmtct_reason_for_not_providing_tpt">Reason for not providing TPT:</string>
    <string name="pmtct_number_of_tpt_days_dispensed">Number of TPT days dispensed:</string>
    <string name="pmtct_prescribed_regimes">Client Prescribed ARVs Regimes:</string>
    <string name="pmtct_arv_line">ARV Line:</string>
    <string name="pmtct_arv_prescription">ARV Prescription</string>
    <string name="pmtct_reason_for_not_prescribing_arv">Reason for not prescribing ARVs:</string>
    <string name="pmtct_other_reason_for_not_prescribing_arv">Other reason for not prescribing ARVs:</string>
    <string name="pmtct_number_of_arv_regimes_days_dispensed">Number of ARVs days dispensed:</string>
    <string name="ld_mode_of_delivery">Mode of delivery:</string>
</resources>