<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/partograph_date_time"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:lines="2"
        android:text="@string/partograph_date_time"
        android:textColor="@color/medical_text_inner"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/fetal_well_being"
        style="@style/CustomFontTextViewStyle.ClientList.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:text="@string/fetal_well_being"
        android:textColor="@color/medical_text_inner"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/fetal_heart_rate"
        style="@style/CustomFontTextViewStyle.ClientList.ThreeLines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/fetal_heart_rate"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/fetal_moulding"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/fetal_moulding"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/amniotic_fluid"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/amniotic_fluid"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/mother_well_being"
        style="@style/CustomFontTextViewStyle.ClientList.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"

        android:text="@string/mother_well_being"
        android:textColor="@color/medical_text_inner"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/pulse_rate"
        style="@style/CustomFontTextViewStyle.ClientList.ThreeLines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/pulse_rate"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/respiratory_rate"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/respiratory_rate"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/temperature"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/temperature"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/blood_pressure"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/blood_pressure"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/urine_protein"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/urine_protein"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/urine_acetone"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/urine_acetone"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/urine_volume"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/urine_volume"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />



    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/fetal_progress_of_labour"
        style="@style/CustomFontTextViewStyle.ClientList.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:text="@string/fetal_progress_of_labour"
        android:textColor="@color/medical_text_inner"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/cervix_dilation"
        style="@style/CustomFontTextViewStyle.ClientList.ThreeLines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/cervix_dilation"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/descent_presenting_part"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/descent_presenting_part"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/contraction"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/contraction"
        android:textColor="@color/medical_sub_text_inner"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_baseline_results_row"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/dark_grey"
        android:visibility="visible" />

</LinearLayout>