<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_anc_member_registration"
        android:enabled="true"
        android:title="@string/registration_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mode_of_delivery"
        android:enabled="true"
        android:title="@string/ld_mode_of_delivery"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ld_emergency_referral"
        android:enabled="true"
        android:title="@string/ld_emergency_referral"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_child_emergency_registration"
        android:enabled="true"
        android:visible="false"
        android:title="@string/refer_child_for_emergency"
        android:orderInCategory="200"
        app:showAsAction="never" />

</menu>